# zoom-cli

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
Formula/: zoom-cli.rb
src/: config.rs  lib.rs  main.rs  output.rs  test_support.rs
src/api/: client.rs  mod.rs  types.rs
src/commands/: config.rs  init.rs  meetings.rs  mod.rs  recordings.rs  reports.rs  users.rs  webinars.rs
tests/fixtures/: clispec-v0.2.json
zoom_cli/: __init__.py  __main__.py
