[package]
name = "zoom-cli"
version = "0.2.2"
edition = "2024"
rust-version = "1.90"
description = "Agent-friendly Zoom CLI with JSON output, structured exit codes, and schema introspection"
readme = "README.md"
license = "MIT"
repository = "https://github.com/rvben/zoom-cli"
homepage = "https://github.com/rvben/zoom-cli"
keywords = ["zoom", "meetings", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "zoom"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
toml = "0.8"
toml_edit = "0.22"
owo-colors = "4"
dirs = "6"
base64 = "0.22"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
